# stewart-filmscreen-homeassistant

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  hacs.json  pyproject.toml  release-please-config.json  requirements_test.txt
.github/workflows/: release-please.yml  tests.yml  validate.yml
custom_components/stewart_filmscreen/: __init__.py  config_flow.py  const.py  coordinator.py  cover.py  entity.py  manifest.json  models.py  services.py  services.yaml
custom_components/stewart_filmscreen/translations/: en.json
tests/: conftest.py  test_const.py  test_init.py  test_integration_real.py  test_services.py
